[gd_scene load_steps=6 format=3 uid="uid://daw03w0dflwfi"]

[ext_resource type="Script" path="res://breakout/scenes/paddles/paddle.gd" id="1_k4fmc"]
[ext_resource type="Texture2D" uid="uid://bim1eeu1mgpdw" path="res://breakout/assets/DefaultPaddle.png" id="2_v4g27"]
[ext_resource type="PackedScene" uid="uid://bglykrd6pd7mw" path="res://breakout/scenes/projectiles/laser_beam.tscn" id="3_gkwa8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eq4ir"]
size = Vector2(640, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xna2j"]
size = Vector2(650, 90)

[node name="Paddle" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 16
collision_mask = 91
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_k4fmc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("2_v4g27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eq4ir")

[node name="LengthChangeTimer" type="Timer" parent="."]
one_shot = true

[node name="SpeedChangeTimer" type="Timer" parent="."]
one_shot = true

[node name="LaserBeamTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xna2j")

[node name="LaserBeam" parent="." instance=ExtResource("3_gkwa8")]
position = Vector2(0, -40)
rotation = -1.5708
scale = Vector2(4, 4)
